fix: fixed image scaling #132 incresed contrast in the slogan  #133

--- a/fare/theme/assets/scss/fare/theme.scss
+++ b/fare/theme/assets/scss/fare/theme.scss
@@ -14,15 +14,23 @@
   background-color: transparent;
   border-color: transparent;
   background-image: url("../../../static/images/frontpage_library.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 .frontpage-search{
   margin-top: 20%;
+  background-color: rgba(22,35,42,.6);
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .frontpage-navbar {
-    min-height: 750px;
-    background-image: url("../../../static/images/frontpage_library.png");
+  min-height: 750px;
+  background-image: url("../../../static/images/frontpage_library.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 .frontpage-subtitle{
@@ -37,6 +45,7 @@
 
 body.cover-page{
   background-image: url("../../../static/images/login_background.png");
+  background-size: 100%;
 }
 
 a{
@@ -104,4 +113,34 @@ footer {
 
 .frontpage-explanation{
   padding: 3%;
+}
+
+.tutorial-image{
+  margin-left: 30%;
+  margin-top: 5%;
+}
+
+.tutorial-row{
+  background-color: gainsboro;
+}
+
+.frontpage-menu-item{
+  color: white;
+  font-size: large;
+}
+
+.frontpage-image{
+  width: 100%;
+}
+
+.container{
+  width: 100%;
+}
+
+.container > .navbar-collapse{
+  background-color: rgba(22,35,42,.6);
+  margin-left: -15px;
+  margin-right: -15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
